using ngModelChange, fix bug add product in detail

--- a/src/app/components/cart-item/cart-item.component.html
+++ b/src/app/components/cart-item/cart-item.component.html
@@ -19,8 +19,8 @@
         min="1"
         type="number"
         (click)="$event.preventDefault(); $event.stopPropagation()"
-        (input)="inputQuantity($event)"
-        [ngModel]="product.quantity"
+        (ngModelChange)="inputQuantity($event)"
+        [(ngModel)]="product.quantity"
       />
     </mat-form-field>
     <button
